fixed gihub activity cards overflow

--- a/styles/project/updateSection.module.scss
+++ b/styles/project/updateSection.module.scss
@@ -1,4 +1,4 @@
-@import '/app/common.module.scss';
+@import "/app/common.module.scss";
 
 .updateSection {
   @include flexCenter();
@@ -18,11 +18,11 @@
   display: flex;
   flex-direction: column;
 
-  h6 {
+  h5 {
     color: $white;
   }
 
-  p {
+  h6 {
     margin: 0;
     color: $white2;
   }
@@ -31,11 +31,11 @@
     width: 42.5vw;
     height: 20vh;
 
-    h3 {
+    h5 {
       font-size: 3vh;
     }
 
-    p {
+    h6 {
       font-size: 2vh;
     }
   }
@@ -46,6 +46,15 @@
   height: 13.5vh;
   padding: 1vh 1vw;
   border-radius: 15px 15px 15px 0;
+  display: flex;
+  flex-direction: column;
+
+  h5,
+  h6 {
+    white-space: wrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 
   @media screen and (max-width: 600px) {
     height: 15vh;
